--- a/salmagundi.html
+++ b/salmagundi.html
@@ -159,5 +159,6 @@
       speedDisplay.textContent = r.toFixed(2) + 'x';
     });
   </script>
+  <p style="font-size:1.5rem;text-align:center;">For more of <em>The Naked Cello</em>'s melodies, wander over to <a href="https://helenmountfort.bandcamp.com/album/the-naked-cello">Helen Mountfort's Bandcamp</a>.</p>
 </body>
 </html>
